# CrazieFlieSwarmCS141

./: gesture_control.py
Emotion-Detection-master/: Installation_Requirements.txt  test.py  train.py
HandGestureControlledDrones/: gesture_control.py  gesture_control_with_emotion.py
hand-gesture-recognition-mediapipe/: app.py  keypoint_classification.py  keypoint_classification_EN.ipynb  pyproject.toml
hand-gesture-recognition-mediapipe/model/keypoint_classifier/: keypoint.csv  keypoint_classifier.hdf5  keypoint_classifier.keras  keypoint_classifier.tflite  keypoint_classifier_label.csv
