[tool.poetry]
name = "hand-gesture-recognition-mediapipe"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mediapipe = "0.8.11"
scikit-learn = "^1.4.2"
opencv-python = "^4.9.0.80"
pandas = "^2.2.2"
seaborn = "^0.13.2"
tensorflow = "^2.16.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
